# todo_bot_microservice

./: .flake8  .gitignore  README.md
bot/: README.md  config.py  main.py  pyproject.toml
bot/dialogs/: comments.py  tasks.py
bot/handlers/: comments.py  start.py  tasks.py
bot/infra/bot/: bot.env  supervisord.conf
bot/infra/docker/: Dockerfile  docker-compose.bot.yml
bot/services/: auth.py  base.py  comments.py  errors.py  exceptions.py  tasks.py
bot/states/: comments.py  tasks.py
bot/utils/: categories.py  status.py  tasks.py
comments_api/: README.md  alembic.ini  db.py  main.py  pyproject.toml  settings.py
comments_api/api/: comments.py
comments_api/cache/: comments.py
comments_api/dependencies/: auth.py  cache.py  db.py
comments_api/infra/api/: comments_api.env  entrypoint.sh  supervisord.conf
comments_api/infra/db/: db.env  init.sh
comments_api/infra/docker/: Dockerfile  docker-compose.comments.yml
comments_api/migrations/: env.py
comments_api/migrations/versions/: 953a1e91bb41_initial_migration.py
comments_api/models/: comment.py
comments_api/repositories/: comments.py
comments_api/schemas/: comment.py
comments_api/services/: comments.py
todo_api/: README.md  pyproject.toml
todo_api/celery_tasks/: celery.py  notifications.py  utils.py
todo_api/infra/api/: entrypoint.sh  supervisord.conf  tasks_api.env
todo_api/tasks/: admin.py  fields.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
todo_api/todo_api/: settings.py  urls.py
todo_api/users/: admin.py  models.py  urls.py  views.py
(+25 files in other folders)
