[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Telegram bot to monitor and manage your tasks and comments"
authors = ["Gricana"]
license = "MIT"
# readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.18.0"
aiogram-dialog = "^2.3.1"
redis = "^5.2.1"
pytz = "^2025.1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
