[tool.poetry]
name = "comments-api"
version = "0.1.0"
description = "REST API to manage comments to tasks"
authors = ["Gricana"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
redis = "^5.2.1"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
