[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = "REST API to manage your daily tasks"
authors = ["Gricana"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
psycopg2-binary = "^2.9.10"
drf-yasg = "^1.21.9"
celery = "^5.4.0"
uvicorn = "^0.34.0"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
